--- a/assets/css/login_admin.css
+++ b/assets/css/login_admin.css
@@ -190,7 +190,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../images/perfum\ \(4\).jpeg'); /* REMPLACEZ ceci par le chemin réel de votre image */
+    background-image: url('../images/logo_or.png'); /* REMPLACEZ ceci par le chemin réel de votre image */
     background-size: cover; /* L'image couvrira toute la zone */
     background-position: center; /* Centre l'image */
     background-repeat: no-repeat; /* Empêche la répétition de l'image */
